- beamer colors may be given using rgb values
- ~underscore argument for pseudocode verbatim function
- equation
- index_exponent
- variables (similar in use to LaTeX counters, but evaluated when
  pretty-printing the .tex file)
- empty, is_empty
- more delimiters, just_left, just_right, between
- index functionalities
- support of multicolumn via the 'layout' optional argument of 'array_line'
- and (many) various other latex commands

Other:
* module Version renamed to Melt_version

Version 1.2.0
=============

Configuration, Compilation and Installation
- Default installation directory is now OCAMLLIB/melt, where OCAMLLIB is
either: the default installation directory of ocamlfind, or
the standard directory of caml if ocamlfind is not available.
- (bugfix) Do not link with mlpost if MLPOST = NO.

Melt tool and library:
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.
- Cairo support for Mlpost 0.7
* ?pdf argument for mlpost becomes ?mode
- -mlpost option
- -mlpost-no-prelude option

Preprocessor:
- Print opened and pending modes in unexpected end of file errors
- Print an error if a "}" appears in text or math mode

Latex library:
- (bugfix) the ~center option of figure has been fixed
- phantom, vphantom, hphantom
- Beamer overlays
- makebox, framebox
- unusual_command, for weird LaTeX commands with interleaved [] and {} arguments
or for commands with multiple optional arguments
- place_label to hackishly place a label
- latex_of_size for user-defined commands
* Latex.document does not add an empty \author{} if the ~author is not given

Version 1.1.0
=============

Configuration:
- Replaced the configuration tool by a more powerful one using Totoconf

Melt tool:
- -classic-display option
- Added the latop tool to parse LaTeX output and re-print it prettier and with
less trash (for now it is more or less deactivated though)

Preprocessor:
- \" in comments become " to stop the OCaml compiler from complaining about